ec2.tf
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-kernel-*-x86_64"]
  }
}

resource "aws_security_group" "ec2_security_group" {
  description = "Allow traffic for EC2 Webservers"
  vpc_id      = aws_vpc.app_vpc.id
}

# resource "aws_instance" "bastion_host" {
#   ami                    = data.aws_ami.amazon_linux.id
#   key_name               = "dw"
#   instance_type          = "t3.micro"
#   associate_public_ip_address = "true"
#   subnet_id     = aws_subnet.public_subnets[0].id
#   vpc_security_group_ids = [aws_security_group.ec2_security_group.id]
#   user_data              = <<-EOF
#               #!/bin/bash
#               yum install docker -y
#               systemctl start docker
#               mkdir content
#               TOKEN=$(curl --request PUT "http://169.254.169.254/latest/api/token" --header "X-aws-ec2-metadata-token-ttl-seconds: 3600")
#               PRIVATE_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4 --header "X-aws-ec2-metadata-token: $TOKEN")
#               cat <<HTML > content/index.html
#               <!DOCTYPE html>
#               <html>
#                 <body style="font-family:Arial, sans-serif;">
#                   <h1>yo this is nginx</h1>
#                   <p>private ip: $PRIVATE_IP</p>
#                 </body>
#               </html>
#               HTML
#               docker run --name some-nginx \
#                        -v $(pwd)/content:/usr/share/nginx/html \
#                        -p 80:80 \
#                        -d nginx
#               EOF
#   tags = {
#     Name          = "bastion-host"
#   }
# }

resource "aws_instance" "example" {
  count = 2
  ami                    = data.aws_ami.amazon_linux.id
  key_name               = "dw"
  instance_type          = "t3.micro"
  associate_public_ip_address = "false"
  subnet_id = element(aws_subnet.private_subnets[*].id, count.index)
  vpc_security_group_ids = [aws_security_group.ec2_security_group.id]
  user_data              = <<-EOF
              #!/bin/bash
              yum install docker -y
              systemctl start docker
              mkdir content
              TOKEN=$(curl --request PUT "http://169.254.169.254/latest/api/token" --header "X-aws-ec2-metadata-token-ttl-seconds: 3600")
              PRIVATE_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4 --header "X-aws-ec2-metadata-token: $TOKEN")
              cat <<HTML > content/index.html
              <!DOCTYPE html>
              <html>
                <body style="font-family:Arial, sans-serif;">
                  <h1>yo this is nginx</h1>
                  <p>private ip: $PRIVATE_IP</p>
                </body>
              </html>
              HTML

              docker run --name some-nginx \
                       -v $(pwd)/content:/usr/share/nginx/html \
                       -p 80:80 \
                       -d nginx
              EOF
  tags = {
    Name          = "deployment-instance"
  }
}

resource "aws_vpc_security_group_ingress_rule" "this" {
  for_each = var.sg_ingress_rules

  security_group_id = aws_security_group.ec2_security_group.id
  description       = each.value.description
  from_port         = each.value.from_port
  to_port           = each.value.to_port
  ip_protocol       = each.value.protocol
  cidr_ipv4         = each.value.cidr_ipv4
}

resource "aws_vpc_security_group_egress_rule" "egress" {
  security_group_id = aws_security_group.ec2_security_group.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
